race.scss some minor changes (settings panels) new background color, border-radius, select space on Y. complexityPanel.scss added in klavotools folder.

--- a/src/main.scss
+++ b/src/main.scss
@@ -84,3 +84,4 @@
 // -----------------------------------------------------------------------------
 @import "./klavotools/BBTools/BBTools";
 @import "./klavotools/remainingDailyRaces";
+@import "./klavotools/complexityPanel";
