--- a/src/klavotools/complexityPanel.scss
+++ b/src/klavotools/complexityPanel.scss
@@ -1,13 +1,12 @@
 @import "../data/variables";
 @import "../animations";
-
 #complexity-panel {
   width: 300px !important;
   border-radius: 5px !important;
   background: $black !important;
   border: 1px solid $gray !important;
-  opacity: 1;
-  transition: opacity 0.2s ease-in-out;
+  opacity: 0.2;
+  transition: opacity 0.2s ease-in-out !important;
 
   &:hover {
     opacity: 1;
@@ -25,7 +24,6 @@
           margin: 10px 0 !important;
           border-radius: 5px !important;
           overflow: hidden !important;
-
           canvas {
             height: 25px !important;
             width: 280px !important;
