--- a/src/race.scss
+++ b/src/race.scss
@@ -600,10 +600,24 @@
         border: 1px solid $gray !important;
         border-radius: 10px !important;
         box-sizing: content-box !important;
+        display: flex !important;
+        align-items: center !important;
 
         &.off {
           background: $gray !important;
           pointer-events: none !important;
+        }
+
+        .handle {
+          background: $gray !important;
+          border-radius: 50% !important;
+          height: 14px !important;
+          width: 14px !important;
+          transition: background 0.2s !important;
+
+          &:hover {
+            background: $lightblue !important;
+          }
         }
       }
     }
