stats.scss adaptive inside the stats.scss

--- a/src/main.scss
+++ b/src/main.scss
@@ -63,7 +63,7 @@
 @import "./forum/forum";
 @import "chatlogs";
 @import "chat";
-@import "./stats/stats";
+@import "stats";
 @import "toplist";
 @import "search";
 @import "donate";
