--- a/src/stats.scss
+++ b/src/stats.scss
@@ -137,6 +137,7 @@
         darken($deepgray, 2%)
       ) !important;
     }
+    
     .statistic-records-title-container {
       @include flex-layout(row);
 
@@ -155,6 +156,81 @@
       tr {
         td {
           max-width: 115px !important;
+        }
+      }
+    }
+
+    // Mobile flex layout for table-records
+    @media (max-width: 600px) {
+      table.table-records {
+        @include flex-layout(column, start, stretch);
+        
+        tbody {
+          @include flex-layout(column, start, stretch);
+          width: 100% !important;
+        }
+        
+        tr {
+          @include flex-layout(column, start, stretch);
+          margin-bottom: 15px !important;
+          padding: 15px !important;
+          background-color: $black !important;
+          border-radius: 8px !important;
+          border: 1px solid $gray !important;
+          
+          // Reset table row height for mobile
+          height: auto !important;
+          
+          // Title (th) as first row
+          th.table-records__title {
+            @include flex-layout(row, start, center);
+            width: 100% !important;
+            max-width: 100% !important;
+            padding: 0 0 8px 0 !important;
+            font-weight: bold !important;
+            color: $orange !important;
+            white-space: break-spaces !important;
+
+            &::after {
+              display: none !important;
+            }
+          }
+          
+          // Second row container for number and user
+          td {
+            display: flex !important;
+            padding: 0 !important;
+            max-width: 100% !important;
+
+            &::after {
+              display: none !important;
+            }
+            
+            &:nth-child(2) {
+              // Number container - first in the second row
+              @include flex-layout(row, start, center);
+              margin-bottom: 8px !important;
+              
+              .table-records__number {
+                font-size: 18px !important;
+                font-weight: bold !important;
+                color: $lightblue !important;
+              }
+            }
+            
+            &:nth-child(3) {
+              // User container - below the number
+              @include flex-layout(row, start, center);
+              padding-left: 30px !important; // Keep the padding for avatar
+              height: 30px !important;
+              
+              a.user {
+                color: $white !important;
+                text-decoration: none !important;
+                font-size: 16px !important;
+              }
+            }
+          }
         }
       }
     }
