--- a/src/vocabularies/vocabulary.scss
+++ b/src/vocabularies/vocabulary.scss
@@ -20,20 +20,37 @@
     margin: 0 !important;
   }
 
-  .user-title {
+  dl.user-title {
     grid-area: title;
     width: 100% !important;
     display: flex !important;
     justify-content: center !important;
 
-    .btn_fav {
-      filter: invert(1) !important;
-    }
+    dd {
+      table {
+        tbody {
+          tr {
+            td.title {
+            }
+            td.links {
+              .btn_play,
+              .btn_fav {
+                margin: 0 !important;
+              }
 
-    .remove {
-      color: $lightblue !important;
-      background: $close-icon no-repeat left center / contain !important;
-      filter: hue-rotate(150deg) !important;
+              .btn_fav {
+                filter: invert(1) !important;
+              }
+            }
+          }
+        }
+      }
+
+      .remove {
+        color: $lightblue !important;
+        background: $close-icon no-repeat left center / contain !important;
+        filter: hue-rotate(150deg) !important;
+      }
     }
   }
 
