--- a/src/floating-navigation.scss
+++ b/src/floating-navigation.scss
@@ -7,6 +7,11 @@
     display: inline-flex !important;
     margin: 10px 0 !important;
 
+    @media (max-width: 380px) {
+      flex-direction: column !important;
+      border-radius: 5px !important;
+    }
+
     li {
       margin: 0 !important;
       padding: 0 15px !important;
@@ -19,6 +24,18 @@
       background: $gray !important;
       border-right: 1px solid $darkgray !important;
       transition: background 0.15s ease !important;
+
+      @media (max-width: 450px) {
+        padding: 0 10px !important;
+        height: 35px !important;
+        font-size: 10px !important;
+
+        @media (max-width: 380px) {
+          width: 280px !important;
+          border-right: none !important;
+          border-radius: 0 !important;
+        }
+      }
 
       // Garbage button with empty content
       &.dummy {
@@ -36,11 +53,11 @@
       }
 
       &:first-child {
-        border-radius: 5px 0 0 5px !important;
+        border-radius: 5px 0 0 5px;
       }
 
       &:nth-child(4) {
-        border-radius: 0 5px 5px 0 !important;
+        border-radius: 0 5px 5px 0;
         border-right: none !important;
       }
 
@@ -59,6 +76,11 @@
         top: 10px !important;
         font-size: 0.8em !important;
         color: $darkgray !important;
+
+        @media (max-width: 450px) {
+          top: 8px !important;
+          font-size: 0.7em !important;
+        }
       }
     }
   }
