--- a/src/vocabularies/vocabulary.scss
+++ b/src/vocabularies/vocabulary.scss
@@ -65,131 +65,6 @@
     }
   }
 
-  .right-col {
-    grid-area: right;
-    position: fixed !important;
-    top: 50% !important;
-    right: 0 !important;
-    transform: translateY(-50%) !important;
-    width: 50px !important; // Trigger area width
-    height: 50px !important; // Trigger area height
-    z-index: 10 !important;
-    cursor: pointer !important;
-    // Fade-in animation
-    opacity: 0;
-    animation: fadeIn 0.5s ease-in-out 0s 1 forwards !important;
-
-    .comments {
-      position: absolute !important;
-      width: 500px !important; // Set to final expanded width
-      height: 50px !important; // Limited height initially
-      max-height: 80vh !important;
-      right: 0 !important;
-      top: 50% !important;
-      transform: translateY(-50%) translateX(calc(100% - 50px)) !important; // Hide most of it off-screen
-      transition: transform 0.3s ease, height 0.3s ease !important;
-      background: $black $reveal-comments-container-icon 10px center / 32px !important;
-      border: 1px solid $blue !important;
-      overflow: hidden !important;
-      overflow-x: hidden !important;
-      overflow-y: auto !important;
-
-      // Content should be hidden initially
-      .comment,
-      .link,
-      h4 {
-        opacity: 0 !important;
-        transition: opacity 0.3s ease !important;
-      }
-
-      .rss {
-        top: 0 !important;
-        background: $rss-icon !important;
-        img {
-          visibility: hidden !important;
-        }
-      }
-
-      .comment {
-        display: flex !important;
-        flex-direction: column !important;
-        position: relative !important;
-        margin: 25px 0 15px !important;
-
-        .info[style*="avatars/"] {
-          width: 32px !important;
-          height: 32px !important;
-          padding-left: 40px !important;
-          &::before {
-            @include avatar-mask(4, 32px, $black);
-          }
-        }
-
-        .info {
-          display: inline-flex !important;
-          align-items: center !important;
-          gap: 5px !important;
-        }
-      }
-
-      .link {
-        width: calc(50% + 15px) !important;
-        height: 32px !important;
-        display: flex !important;
-        justify-content: center !important;
-        align-items: center !important;
-        text-decoration: none !important;
-        color: $black !important;
-        background-color: $gray !important;
-        bottom: 0 !important;
-        transition: background-color 0.15s ease !important;
-        position: sticky !important;
-
-
-        &:hover {
-          background-color: $blue !important;
-        }
-        i {
-          margin: 0 !important;
-          left: 15px !important;
-        }
-      }
-
-      .write {
-        margin-left: -15px !important;
-        float: left !important;
-        left: 0 !important;
-        border-right: 1px solid $black !important;
-        i {
-          background: $write-comment-icon !important;
-        }
-      }
-
-      .other {
-        margin-right: -15px !important;
-        float: right !important;
-        left: 50% !important;
-        i {
-          background: $show-comments-icon !important;
-        }
-      }
-    }
-
-    // Hover behavior - slide in and show content
-    &:hover .comments {
-      transform: translateY(-50%) translateX(0) !important; // Slide fully into view
-      height: auto !important; // Expand to fit content
-      background: $black !important; // Remove icon background on hover
-
-      .comment,
-      .link,
-      h4 {
-        opacity: 1 !important; // Show content
-      }
-    }
-
-  }
-
   .menu {
     grid-area: menu;
     width: 100% !important;
@@ -287,3 +162,5 @@
     }
   }
 }
+
+@import "./vocabulary-comments";
