forum post > text > img.linked-image opacity but not on smilies

--- a/src/chat.scss
+++ b/src/chat.scss
@@ -399,7 +399,7 @@ $chatHeaderSize: 26px;
             }
 
             .userlist {
-              padding: 10px !important;
+              padding: 0 10px !important;
               width: 200px !important;
 
               // Empowerment script classname
