recentGames.scss added. Initial code base.

--- a/src/main.scss
+++ b/src/main.scss
@@ -85,3 +85,4 @@
 @import "./klavotools/remainingDailyRaces";
 @import "./klavotools/complexityPanel";
 @import "./klavotools/ignoreList";
+@import "./klavotools/recentGames";
