--- a/src/data/variables.scss
+++ b/src/data/variables.scss
@@ -192,13 +192,15 @@ $chevronDown-icon_white: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2
   @return url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg>');
 }
 
-$close-icon_white: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$white}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>');
+@function close-icon($color) {
+  @return url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>');
+}
 
 $maximize-icon_white: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$white}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"></path></svg>');
 
-$anchor-icon_white: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$white}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="5" r="3"></circle><line x1="12" y1="22" x2="12" y2="8"></line><path d="M5 12H2a10 10 0 0 0 20 0h-3"></path></svg>');
-
-$anchor-icon_lightblue: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$lightblue}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="5" r="3"></circle><line x1="12" y1="22" x2="12" y2="8"></line><path d="M5 12H2a10 10 0 0 0 20 0h-3"></path></svg>');
+@function anchor-icon($color) {
+  @return url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="5" r="3"></circle><line x1="12" y1="22" x2="12" y2="8"></line><path d="M5 12H2a10 10 0 0 0 20 0h-3"></path></svg>');
+}
 
 $send-icon_black: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="-10 -10 270 270"><path fill="#{$black}" d="M22.32 98.04l-19.04 -87.15c-0.75,-3.46 0.48,-6.84 3.29,-9 2.81,-2.17 6.39,-2.49 9.55,-0.87l225.95 116.02c3.07,1.57 4.87,4.52 4.87,7.96 0,3.44 -1.8,6.39 -4.87,7.96l-225.95 116.02c-3.16,1.62 -6.74,1.3 -9.55,-0.87 -2.81,-2.16 -4.04,-5.54 -3.29,-9l19.04 -87.15c0.79,-3.62 3.53,-6.26 7.18,-6.91l102.6 -18.19c0.91,-0.16 1.56,-0.94 1.56,-1.86 0,-0.92 -0.65,-1.7 -1.56,-1.86l-102.6 -18.19c-3.65,-0.65 -6.39,-3.29 -7.18,-6.91z"/></svg>');
 
@@ -302,4 +304,12 @@ $flag-icon_black: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg
 
 @function dragTopLeft-icon($color) {
   @return url('data:image/svg+xml,<svg width="24" height="24" viewBox="0 0 6 6" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path fill="#{$color}" d="M0.96,0.24c0.397,0 0.72,0.323 0.72,0.72c0,0.397 -0.323,0.72 -0.72,0.72c-0.397,0 -0.72,-0.323 -0.72,-0.72c0,-0.397 0.323,-0.72 0.72,-0.72Zm1.92,0c0.397,0 0.72,0.323 0.72,0.72c0,0.397 -0.323,0.72 -0.72,0.72c-0.397,0 -0.72,-0.323 -0.72,-0.72c0,-0.397 0.323,-0.72 0.72,-0.72Zm1.92,0c0.397,0 0.72,0.323 0.72,0.72c0,0.397 -0.323,0.72 -0.72,0.72c-0.397,0 -0.72,-0.323 -0.72,-0.72c0,-0.397 0.323,-0.72 0.72,-0.72Zm-1.92,1.92c0.397,0 0.72,0.323 0.72,0.72c0,0.397 -0.323,0.72 -0.72,0.72c-0.397,0 -0.72,-0.323 -0.72,-0.72c0,-0.397 0.323,-0.72 0.72,-0.72Zm-1.92,0c0.397,0 0.72,0.323 0.72,0.72c0,0.397 -0.323,0.72 -0.72,0.72c-0.397,0 -0.72,-0.323 -0.72,-0.72c0,-0.397 0.323,-0.72 0.72,-0.72Zm0,1.92c0.397,0 0.72,0.323 0.72,0.72c0,0.397 -0.323,0.72 -0.72,0.72c-0.397,0 -0.72,-0.323 -0.72,-0.72c0,-0.397 0.323,-0.72 0.72,-0.72Z"/></svg>');
+}
+
+@function trash-icon($color) {
+  @return url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path></svg>');
+}
+
+@function locked-icon($color) {
+  @return url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#{$color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>');
 }
