recentGames.scss finished

--- a/src/gametypes.scss
+++ b/src/gametypes.scss
@@ -38,6 +38,7 @@ $gametype-icons: (
 // DYNAMIC GAMETYPE COLORS
 // ====================
 
+#recent-games-container,
 #gametype-select,
 #content,
 #popup {
