chat.scss disable gamelist when chat is opened on viewport width less than 800px

--- a/src/chat.scss
+++ b/src/chat.scss
@@ -4,6 +4,15 @@
 $chatHeaderSize: 26px;
 
 #content {
+  // Hide gamelist on mobile when chat is not hidden
+  @media (max-width: 800px) {
+    &:has(#chat-wrapper:not(.chat-hidden)) {
+      #gamelist {
+        display: none !important;
+      }
+    }
+  }
+
   #chat-inline-placeholder,
   #chat-fixed-placeholder {
     #chat-wrapper {
