--- a/src/pagination.scss
+++ b/src/pagination.scss
@@ -1,23 +1,27 @@
 @import "./data/variables";
 
-/* Pagination controls styles - unified for all pages */
+// Pagination controls styles - unified for all pages
 .pages {
   opacity: 0.5 !important;
   color: $white !important;
   background: $black !important;
-  margin: 10px !important;
   position: fixed !important;
-  bottom: 40% !important;
-  transform: translateY(50%) !important;
-  right: 10px !important;
+  top: 45px !important;
+  right: 0 !important;
   z-index: 120 !important;
   transition: opacity 0.15s ease-out !important;
   display: flex !important;
   gap: 5px !important;
+  margin: 0 !important;
   padding: 10px !important;
-  max-width: 350px !important;
   flex-wrap: wrap !important;
   border-radius: 5px !important;
+
+  @media (max-width: 2000px) {
+    flex-direction: column !important;
+    top: unset !important;
+    bottom: 0 !important;
+  }
 
   // Make background transparent when there's no .paginator inside
   &:not(:has(.paginator)) {
@@ -29,7 +33,7 @@
     transition: opacity 0.2s !important;
   }
 
-  /* Nested paginator controls */
+  // Nested paginator controls
   .paginator {
     font-size: 0 !important;
     margin-bottom: unset !important;
@@ -38,12 +42,18 @@
       display: none !important;
     }
 
-    /* Controls within paginator */
+    // Controls within paginator
     .ctrls {
       margin: 0 !important;
       display: flex !important;
+      overflow: hidden !important;
+      border-radius: 3px !important;
 
-      /* Hide icons in forum pagination */
+      @media (max-width: 2000px) {
+        flex-direction: column !important;
+      }
+
+      // Hide icons in forum pagination
       i {
         display: none !important;
       }
@@ -54,12 +64,17 @@
       width: 30px !important;
       height: 30px !important;
 
+      &.na {
+        display: none !important;
+      }
+
       a {
         display: inline-block !important;
         height: 30px !important;
         background-color: $gray !important;
         background-position: center !important;
         background-repeat: no-repeat !important;
+        background-size: 20px !important;
         text-decoration: none !important;
         color: $darkgray !important;
         padding: 0 !important;
@@ -67,27 +82,25 @@
         text-align: center !important;
         transition: all 0.1s !important;
 
-        /* Next button icon */
+        // Next button icon
         &:nth-child(1) {
-          background-image: $pagination-next-icon !important;
-          border-radius: 0 3px 3px 0 !important;
+          background-image: chevronRight-icon($black) !important;
         }
 
-        /* Previous button icon */
+        // Previous button icon
         &:nth-child(2) {
-          background-image: $pagination-prev-icon !important;
-          border-radius: 3px 0 0 3px !important;
+          background-image: chevronLeft-icon($black) !important;
         }
 
         &:hover {
           background-color: $blue !important;
-          transition: all 0.1s !important;
+          transition: background-color 0.1s ease-in-out !important;
         }
       }
     }
   }
 
-  /* Page number styling */
+  // Page number styling
   .page,
   .selected {
     justify-content: center !important;
