adaptive pagination done

--- a/src/mainMenu/mainMenu-adaptive.scss
+++ b/src/mainMenu/mainMenu-adaptive.scss
@@ -36,7 +36,7 @@
         color: $blue !important;
         cursor: pointer !important;
         z-index: 10000 !important;
-        border-radius: 3px !important;
+        border-radius: 0 0 5px 5px !important;
         background: $menu !important;
       }
 
